# mlops

./: .env.example  .gitignore  API_GUIDE.md  ARCHITECTURE.md  COMMANDS_CHEATSHEET.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  Dockerfile  FOLDER_CONFIG.md  FRAUD_DETECTION.md  GITHUB_ACTIONS.md  GUIDE.md  INDEX.md  LICENSE  MANIFEST.in  PROJECT_MAP.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  TRANSFORMATION_SUMMARY.md  ZENML_DASHBOARD_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  run_experiments.py  run_simple_fraud_detection.py  run_zenml_pipeline.py  setup.ps1  setup.py  start_mlflow.bat  start_mlflow.ps1  test_api.py  verify_installation.py
.dvc/: config
.github/workflows/: ci.yml  code-quality.yml  deploy.yml  docker-publish.yml  publish-pypi.yml  release.yml  run-pipeline.yml
data/: processed.dvc
data/raw/: fraud_transactions.csv.dvc
notebooks/: exploration.ipynb
src/: config.py
src/api/: __init__.py  app.py
src/data/: data_loader.py  preprocessing.py
src/models/: train.py
src/pipelines/: training_pipeline.py
